--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,10 @@ dependencies {
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
 
+    compile 'io.reactivex:rxjava:1.1.6'
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+
     compile 'org.projectlombok:lombok:1.16.10'
 
     testCompile 'junit:junit:4.12'
