--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,20 +35,15 @@ dependencies {
     })
 
     compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:design:25.3.1'
-
     compile 'org.glassfish:javax.annotation:10.0-b28'
-
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.google.code.gson:gson:2.7'
+    compile 'com.google.code.gson:gson:2.8.1'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-
-    compile 'io.reactivex:rxjava:1.1.6'
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-
+    compile 'com.github.bumptech.glide:glide:4.0.0-RC0'
+    compile 'com.theartofdev.edmodo:android-image-cropper:2.4.5'
     compile 'org.projectlombok:lombok:1.16.10'
-
     testCompile 'junit:junit:4.12'
-
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
 }
