--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="hr.tvz.quiz">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
@@ -23,13 +23,17 @@
             </intent-filter>
         </activity>
         <activity android:name=".SignUpActivity" />
-        <activity android:name=".SinglePlayerActivity"/>
-        <activity android:name=".GameEndActivity"/>
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".SinglePlayerActivity" />
+        <activity android:name=".GameEndActivity" />
+        <activity android:name=".MainActivity" />
         <activity android:name=".EditProfileActivity" />
-        <activity android:name=".PlayModeActivity"/>
-        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-            android:theme="@style/Base.Theme.AppCompat"/>
+        <activity android:name=".PlayModeActivity" />
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
+        <activity android:name=".ReportedQuestionsActivity" />
+        <activity android:name=".AdminReportedQuestionsActivity" />
+        <activity android:name=".AdminReportedQuestionActivity"></activity>
     </application>
 
 </manifest>
