--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,17 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 25
     buildToolsVersion '25.0.3'
     defaultConfig {
         applicationId "hr.tvz.quiz"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
     buildTypes {
         release {
@@ -26,6 +28,11 @@ android {
         exclude 'META-INF/notice.txt'
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
 }
 
 dependencies {
@@ -34,13 +41,24 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    compile 'com.github.NaikSoftware:StompProtocolAndroid:1.3.0'
+    compile 'org.java-websocket:java-websocket:1.3.2'
+    compile 'io.reactivex:rxandroid:1.2.1'
+
+    compile 'com.koushikdutta.async:androidasync:2.2.1'
+
+    compile 'com.squareup.okhttp3:okhttp:3.6.0'
+
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'org.glassfish:javax.annotation:10.0-b28'
+
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+
     compile 'com.github.bumptech.glide:glide:4.0.0-RC0'
     compile 'com.theartofdev.edmodo:android-image-cropper:2.4.5'
     compile 'org.projectlombok:lombok:1.16.10'
@@ -48,3 +66,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
 }
+
+
